feat: Implement 5-type SiteQuality system with ⭐5 premium support
- Expand review templates from 252 to 504 (2x increase)
- Create run-daily-reviews-v4.cjs with 5 tiers:
  - premium: ⭐3-5 (25%, 55%, 20%), 100% daily
  - excellent: ⭐3-4, 80% daily
  - normal: ⭐2-4, 20% (~5 days)
  - poor: ⭐1-3, 14% (~7 days)
  - malicious: ⭐1-2, 10% (~10 days)
- Update GitHub Actions to use v4 script
- Enable ⭐5 reviews for premium tier only
- Template expansion uses synonyms, no category-specific terms
- All templates backed up before modification
- Fix uploadReview function signature
- Add validation for invalid record IDs

--- a/.github/workflows/auto-post-reviews.yml
+++ b/.github/workflows/auto-post-reviews.yml
@@ -23,12 +23,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run daily reviews script (v3 - custom reviews)
+      - name: Run daily reviews script (v4 - 5 types support)
         env:
           AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
           REVIEW_ROUNDS: 1  # 自動実行では1ラウンドのみ（手動実行時は環境変数で変更可能）
-        run: node scripts/run-daily-reviews-v3.cjs
+        run: node scripts/run-daily-reviews-v4.cjs
 
       - name: Verify execution and data integrity
         env:
